--- a/Kubectl-Dockerfile/Dockerfile
+++ b/Kubectl-Dockerfile/Dockerfile
@@ -6,10 +6,9 @@ RUN apt-get update \
  && apt-get install curl -y
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
 RUN chmod +x ./kubectl && mv ./kubectl /usr/bin/kubectl
-COPY /root/k8s-config/deploy.yml /root
+ADD ./k8s-config/deploy.yml ~/
 RUN mkdir ~/.kube
-WORKDIR ~/.kube
-COPY /root/k8s-config/config .
+ADD ./k8s-config/* ~/.kube
 
 RUN mkdir /var/run/sshd
 RUN echo 'root:redhat' | chpasswd
