Task4 file changes

--- a/Kubectl-Dockerfile/Dockerfile
+++ b/Kubectl-Dockerfile/Dockerfile
@@ -1,8 +1,8 @@
 FROM ubuntu
 
-echo "Asia/Kolkata" > /etc/timezone
-rm -f /etc/localtime
-dpkg-reconfigure -f noninteractive tzdata
+RUN echo "Asia/Kolkata" > /etc/timezone
+RUN rm -f /etc/localtime
+RUN dpkg-reconfigure -f noninteractive tzdata
 
 RUN apt-get update \
  && apt-get install openssh-server -y \
