--- a/Kubectl-Dockerfile/Dockerfile
+++ b/Kubectl-Dockerfile/Dockerfile
@@ -1,10 +1,8 @@
 FROM ubuntu
 
-RUN echo "Asia/Kolkata" > /etc/timezone
-RUN rm -f /etc/localtime
-RUN dpkg-reconfigure -f noninteractive tzdata
-
+RUN DEBIAN_FRONTEND="noninteractive"
 RUN apt-get update \
+ &&  apt-get install tzdata -y \
  && apt-get install openssh-server -y \
  && apt-get install openjdk-8-jdk -y \
  && apt-get install curl -y
